<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AboutMeActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/aboutme"
        android:gravity="center"
        android:text="@string/about_me"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <Button
            android:id="@+id/linkedinBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/buttonBg"
            android:drawableLeft="@drawable/linkedin"
            android:text="@string/linkedin"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/callBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/buttonBg"
            android:drawableLeft="@drawable/whatsapp"
            android:text="@string/hablemos"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/emailBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/buttonBg"
            android:drawableLeft="@drawable/mail"
            android:text="@string/message_me"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/callmeBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="@color/buttonBg"
            android:drawableLeft="@drawable/baseline_call_24"
            android:text="@string/ll_mame"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textSize="32sp"
        android:text="@string/estamos_en_contacto"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>